[package]
name = "sc-cli"
version = "0.8.2"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate CLI interface."
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
base64 = { version = "0.12.3", registry = "crates-io" }
derive_more = { version = "0.99.2", registry = "crates-io" }
log = { version = "0.4.8", registry = "crates-io" }
atty = { version = "0.2.13", registry = "crates-io" }
regex = { version = "1.3.4", registry = "crates-io" }
time = { version = "0.1.42", registry = "crates-io" }
ansi_term = { version = "0.12.1", registry = "crates-io" }
lazy_static = { version = "1.4.0", registry = "crates-io" }
tokio = { version = "0.2.21", features = [ "signal", "rt-core", "rt-threaded", "blocking" ], registry = "crates-io" }
futures = { version = "0.3.4", registry = "crates-io" }
fdlimit = { version = "0.2.0", registry = "crates-io" }
libp2p = { version = "0.28.1", registry = "crates-io" }
parity-scale-codec = { version = "1.3.0", registry = "crates-io" }
hex = { version = "0.4.2", registry = "crates-io" }
rand = { version = "0.7.3", registry = "crates-io" }
bip39 = { version = "0.6.0-beta.1", registry = "crates-io" }
serde_json = { version = "1.0.41", registry = "crates-io" }
sc-keystore = { version = "2.0.0", path = "../keystore", registry = "crates-io" }
sc-informant = { version = "0.8.0", path = "../informant", registry = "crates-io" }
sp-panic-handler = { version = "2.0.0", path = "../../primitives/panic-handler", registry = "crates-io" }
sc-client-api = { version = "2.0.0", path = "../api", registry = "crates-io" }
sp-blockchain = { version = "2.0.0", path = "../../primitives/blockchain", registry = "crates-io" }
sc-network = { version = "0.8.2", path = "../network", registry = "chronicled-platform-v2" }
sp-runtime = { version = "2.0.0", path = "../../primitives/runtime", registry = "crates-io" }
sp-utils = { version = "2.0.0", path = "../../primitives/utils", registry = "crates-io" }
sp-version = { version = "2.0.0", path = "../../primitives/version", registry = "crates-io" }
sp-core = { version = "2.0.0", path = "../../primitives/core", registry = "crates-io" }
sc-service = { version = "0.8.2", default-features = false, path = "../service", registry = "chronicled-platform-v2" }
sp-state-machine = { version = "0.8.0", path = "../../primitives/state-machine", registry = "crates-io" }
sc-telemetry = { version = "2.0.0", path = "../telemetry", registry = "crates-io" }
substrate-prometheus-endpoint = { path = "../../utils/prometheus" , version = "0.8.0", registry = "crates-io" }
sp-keyring = { version = "2.0.0", path = "../../primitives/keyring", registry = "crates-io" }
names = { version = "0.11.0", registry = "crates-io" }
structopt = { version = "0.3.8", registry = "crates-io" }
sc-tracing = { version = "2.0.0", path = "../tracing", registry = "crates-io" }
chrono = { version = "0.4.10", registry = "crates-io" }
parity-util-mem = { version = "0.7.0", default-features = false, features = ["primitive-types"], registry = "crates-io" }
serde = { version = "1.0.111", registry = "crates-io" }
tracing = { version = "0.1.10", registry = "crates-io" }
tracing-log = { version = "0.1.1", registry = "crates-io" }
tracing-subscriber = { version = "0.2.10", registry = "crates-io" }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
rpassword = { version = "4.0.1", registry = "crates-io" }

[target.'cfg(target_family = "unix")'.dependencies]
nix = { version = "0.17.0", registry = "crates-io" }

[dev-dependencies]
tempfile = { version = "3.1.0", registry = "crates-io" }
sp-io = { version = "2.0.0-rc3", path = "../../primitives/io", registry = "crates-io" }
sp-application-crypto = { version = "2.0.0-alpha.2", default-features = false, path = "../../primitives/application-crypto", registry = "crates-io" }

[features]
wasmtime = [
	"sc-service/wasmtime",
]
