[package]
name = "sr-primitives"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
runtime_io = { package = "sr-io", path = "../sr-io", default-features = false }

[dev-dependencies]
serde_json = "1.0"
primitive-types = "0.4"

[features]
default = ["std"]
std = [
	"runtime_io/std",
]
