[package]
name = "sr-primitives"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
num-traits = { version = "0.2", default-features = false }
integer-sqrt = { version = "0.1.2" }
serde = { version = "1.0", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", path = "/home/thiolliere/Developpement/parity-scale-codec", default-features = false, features = ["derive"] }
substrate-primitives = { path = "../primitives", default-features = false }
rstd = { package = "sr-std", path = "../sr-std", default-features = false }
runtime_io = { package = "sr-io", path = "../sr-io", default-features = false }
log = { version = "0.4", optional = true }
paste = { version = "0.1"}

[dev-dependencies]
serde_json = "1.0"
primitive-types = "0.4"

[features]
default = ["std"]
std = [
	"num-traits/std",
	"serde",
	"log",
	"rstd/std",
	"runtime_io/std",
	"codec/std",
	"substrate-primitives/std",
]
# [patch.crates-io]
# parity-scale-codec = { path = "../parity-scale-codec" }
# finality-grandpa = { path = "../finality-grandpa" }
# primitive-types = { path = "../parity-common/primitive-types" }
# rhododendron = { path = "../rhododendron" }
# trie-bench = { path = "../trie/test-support/trie-bench" }
