[package]
name = "sr-sandbox"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"
edition = "2018"

[build-dependencies]
rustc_version = "0.2"

[dependencies]
wasmi = { version = "0.4.3", optional = true }
primitives = { package = "substrate-primitives", path = "../primitives", default-features = false }
rstd = { package = "sr-std", path = "../sr-std", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.1", default-features = false }

[dev-dependencies]
wabt = "~0.7.4"
assert_matches = "1.1"

[features]
default = ["std"]
std = [
	"wasmi",
	"primitives/std",
	"rstd/std",
	"codec/std",
]
nightly = []
strict = []

[patch.crates-io]
parity-scale-codec = { path = "../../../parity-scale-codec" }
finality-grandpa = { path = "../../../finality-grandpa" }
primitive-types = { path = "../../../parity-common/primitive-types" }
rhododendron = { path = "../../../rhododendron" }
trie-bench = { path = "../../../trie/test-support/trie-bench" }
