[package]
name = "srml-grandpa"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
primitives = { package = "substrate-primitives",  path = "../../core/primitives", default-features = false }
substrate-finality-grandpa-primitives = { path = "../../core/finality-grandpa/primitives", default-features = false }
rstd = { package = "sr-std", path = "../../core/sr-std", default-features = false }
sr-primitives = { path = "../../core/sr-primitives", default-features = false }
sr-staking-primitives = { path = "../../core/sr-staking-primitives", default-features = false }
srml-support = { path = "../support", default-features = false }
system = { package = "srml-system", path = "../system", default-features = false }
session = { package = "srml-session", path = "../session", default-features = false }
finality-tracker = { package = "srml-finality-tracker", path = "../finality-tracker", default-features = false }
app-crypto = { package = "substrate-application-crypto", path = "../../core/application-crypto", default-features = false }
consensus-common-primitives = { package = "substrate-consensus-common-primitives", path = "../../core/consensus/common/primitives", default-features = false }

[dev-dependencies]
runtime_io = { package = "sr-io", path = "../../core/sr-io" }

[features]
default = ["std"]
std = [
	"serde",
	"app-crypto/std",
	"codec/std",
	"consensus-common-primitives/std",
	"finality-tracker/std",
	"primitives/std",
	"rstd/std",
	"session/std",
	"sr-primitives/std",
	"sr-staking-primitives/std",
	"srml-support/std",
	"substrate-finality-grandpa-primitives/std",
	"system/std",
]
