[package]
name = "srml-support"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
sr-primitives = { path = "../../core/sr-primitives", default-features = false }

[features]
default = ["std"]
std = [
	"sr-primitives/std",
]
nightly = []
strict = []
