[package]
name = "sc-finality-grandpa-rpc"
version = "0.8.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "RPC extensions for the GRANDPA finality gadget"
edition = "2018"
license = "GPL-3.0"

[dependencies]
sc-finality-grandpa = { version = "0.8.0", path = "../" }
jsonrpc-core = "14.0.3"
jsonrpc-core-client = "14.0.3"
jsonrpc-derive = "14.0.3"
futures = "0.3.1"
sp-runtime = { version = "2.0.0", path = "../../../primitives/runtime" }

[dev-dependencies]
substrate-test-runtime-client = { version = "2.0.0", path = "../../../test-utils/runtime/client" }
