[package]
name = "sp-memory-derive"
version = "2.0.0"
authors = ["Parity Technologies"]
license = "GPL-3.0"
description = "Crate for memory reporting support (automatic derives)"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
synstructure = "0.12"
