[package]
name = "substrate-consensus-common-primitives"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Common consensus primitives"
edition = "2018"

[dependencies]
app-crypto = { package = "substrate-application-crypto", path = "../../../application-crypto", default-features = false }
client = { package = "substrate-client", path = "../../../client", default-features = false }
codec = { package = "parity-scale-codec", default-features = false, version = "1.0.3" }
primitives = { package = "substrate-primitives", path = "../../../primitives", default-features = false }
rstd = { package = "sr-std", path = "../../../sr-std", default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }
sr-primitives = { path = "../../../sr-primitives", default-features = false }
sr-staking-primitives = { path = "../../../sr-staking-primitives", default-features = false }

[features]
default = ["std"]
std = [
	"client/std",
	"codec/std",
	"primitives/std",
	"rstd/std",
	"serde",
	"sr-primitives/std",
	"sr-staking-primitives/std",
]
